Bug 1253241 - Return empty render bound for empty clip. r=mattwoodrow